--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
     {% seo %}
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
     <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
 
@@ -101,7 +101,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a target="_blank" class="nav-link" href="https://github.com/meta-explore">
+                        <a target="_blank" class="nav-link" href="https://github.com/lyove">
                             <i class="fab fa-github"></i> 
                             {% if site.locale == "zh-cn" %}
                                 {{ site.zh-cn_fork-github }}
@@ -146,7 +146,7 @@
     ================================================== -->
     <div class="alertbar">
         <div class="container text-center">
-            <span>Welcome to <b>Meta-Explore</b></span>
+            <span>Welcome to <b>Lyove</b></span>
         </div>
     </div>
 
@@ -184,7 +184,7 @@
                     Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
                 </div>
                 <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                    <a target="_blank" href="https://github.com/meta-explore">Meta-Explore</a> by Meta-Explore
+                    <a target="_blank" href="https://github.com/lyove">Lyove</a> by Lyove
                 </div>
             </div>
         </div>
