--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,6 +1,6 @@
 /* 
-Template Name:  Meta-Explore 
-Copyright:  Meta-Explore, https://github.com/meta-explore
+Template Name:  Lyove 
+Copyright:  Lyove, https://github.com/lyove
 */
 .h1,
 .h2,
